# bottleneck-research-cli

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  br_research_cli.py  pyproject.toml
tests/: test_cli.py
tests/fixtures/: sample_data.json
