[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bottleneck-research-cli"
version = "0.1.0"
description = "Agent research context CLI for Bottleneck Research"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bottleneck Research" }]
keywords = ["research", "agent", "supply-chain", "finance", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://bottleneckresearch.com"
Repository = "https://github.com/chatjesus/bottleneck-research-cli"

[project.scripts]
br = "br_research_cli:main"

[tool.setuptools]
py-modules = ["br_research_cli"]
